Removed // accents from section titles

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <section class="about" id="about">
         <div class="container">
             <h2 class="section-title reveal">
-                <span class="title-accent">//</span> About Me
+                <span class="title-accent"></span> About Me
             </h2>
             <div class="about-content">
                 <div class="about-text reveal">
@@ -252,7 +252,7 @@
     <section class="skills" id="skills">
         <div class="container">
             <h2 class="section-title reveal">
-                <span class="title-accent">//</span> Skills & Technologies
+                <span class="title-accent"></span> Skills & Technologies
             </h2>
             <div class="skills-grid">
                 <div class="skill-category reveal">
@@ -431,7 +431,7 @@
     <section class="projects" id="projects">
         <div class="container">
             <h2 class="section-title reveal">
-                <span class="title-accent">//</span> Featured Projects
+                <span class="title-accent"></span> Featured Projects
             </h2>
             <div class="project-filters reveal">
                 <button class="filter-btn active" data-filter="all">All</button>
@@ -665,7 +665,7 @@
     <section class="contact" id="contact">
         <div class="container">
             <h2 class="section-title reveal">
-                <span class="title-accent">//</span> Get In Touch
+                <span class="title-accent"></span> Get In Touch
             </h2>
             <p class="contact-intro reveal">I'm always open to discussing new projects, creative ideas, or opportunities
                 to be part of your vision.</p>
