Update Skills section: blue theme, glassmorphism, Data Visualization & Analysis

--- a/index.html
+++ b/index.html
@@ -301,10 +301,15 @@
     <!-- Skills Section -->
     <section class="skills" id="skills">
         <div class="container">
+            <p class="section-subtitle reveal">WHAT I DO</p>
             <h2 class="section-title reveal">
-                <span class="title-accent"></span> Skills & Technologies
+                <span class="title-accent"></span> Technical Arsenal
             </h2>
+            <p class="section-desc reveal">Comprehensive toolkit for data science, machine learning, and AI development
+            </p>
+
             <div class="skills-grid">
+                <!-- Programming Languages -->
                 <div class="skill-category reveal">
                     <h3 class="category-title">
                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -313,21 +318,14 @@
                         </svg>
                         Programming Languages
                     </h3>
-                    <div class="skill-items">
-                        <div class="skill-item">
-                            <div class="skill-info"><span>Python</span><span>95%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="95"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-info"><span>C++</span><span>75%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="75"></div>
-                            </div>
-                        </div>
+                    <div class="skill-tags">
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">SQL</span>
+                        <span class="skill-tag">C++</span>
                     </div>
                 </div>
+
+                <!-- Machine Learning -->
                 <div class="skill-category reveal">
                     <h3 class="category-title">
                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -337,27 +335,37 @@
                         </svg>
                         Machine Learning
                     </h3>
-                    <div class="skill-items">
-                        <div class="skill-item">
-                            <div class="skill-info"><span>TensorFlow</span><span>90%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="90"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-info"><span>Keras</span><span>88%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="88"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-info"><span>Scikit-learn</span><span>85%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="85"></div>
-                            </div>
-                        </div>
+                    <div class="skill-tags">
+                        <span class="skill-tag">Scikit-Learn</span>
+                        <span class="skill-tag">Feature Engineering</span>
+                        <span class="skill-tag">Model Evaluation</span>
+                        <span class="skill-tag">Hyperparameter Tuning</span>
+                        <span class="skill-tag">Ensemble Methods</span>
+                        <span class="skill-tag">Statistical Modeling</span>
                     </div>
                 </div>
+
+                <!-- Deep Learning -->
+                <div class="skill-category reveal">
+                    <h3 class="category-title">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="3" />
+                            <path
+                                d="M12 2v4M12 18v4M4.93 4.93l2.83 2.83M16.24 16.24l2.83 2.83M2 12h4M18 12h4M4.93 19.07l2.83-2.83M16.24 7.76l2.83-2.83" />
+                        </svg>
+                        Deep Learning
+                    </h3>
+                    <div class="skill-tags">
+                        <span class="skill-tag">TensorFlow</span>
+                        <span class="skill-tag">PyTorch</span>
+                        <span class="skill-tag">CNNs</span>
+                        <span class="skill-tag">Vision Transformers</span>
+                        <span class="skill-tag">GANs</span>
+                        <span class="skill-tag">Transfer Learning</span>
+                    </div>
+                </div>
+
+                <!-- Computer Vision -->
                 <div class="skill-category reveal">
                     <h3 class="category-title">
                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -369,21 +377,36 @@
                         </svg>
                         Computer Vision
                     </h3>
-                    <div class="skill-items">
-                        <div class="skill-item">
-                            <div class="skill-info"><span>OpenCV</span><span>92%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="92"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-info"><span>MediaPipe</span><span>80%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="80"></div>
-                            </div>
-                        </div>
+                    <div class="skill-tags">
+                        <span class="skill-tag">OpenCV</span>
+                        <span class="skill-tag">MediaPipe</span>
+                        <span class="skill-tag">YOLO</span>
+                        <span class="skill-tag">Image Processing</span>
+                        <span class="skill-tag">Object Detection</span>
+                        <span class="skill-tag">Segmentation</span>
                     </div>
                 </div>
+
+                <!-- NLP / LLM -->
+                <div class="skill-category reveal">
+                    <h3 class="category-title">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" />
+                        </svg>
+                        NLP / LLM
+                    </h3>
+                    <div class="skill-tags">
+                        <span class="skill-tag">Hugging Face</span>
+                        <span class="skill-tag">LangChain</span>
+                        <span class="skill-tag">Sentence Transformers</span>
+                        <span class="skill-tag">LoRA Fine-tuning</span>
+                        <span class="skill-tag">Llama.cpp</span>
+                        <span class="skill-tag">GGUF Quantization</span>
+                        <span class="skill-tag">RAG</span>
+                    </div>
+                </div>
+
+                <!-- Data Visualization & Analysis -->
                 <div class="skill-category reveal">
                     <h3 class="category-title">
                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -391,91 +414,58 @@
                             <line x1="12" y1="20" x2="12" y2="4" />
                             <line x1="6" y1="20" x2="6" y2="14" />
                         </svg>
-                        Data Science
+                        Data Visualization & Analysis
                     </h3>
-                    <div class="skill-items">
-                        <div class="skill-item">
-                            <div class="skill-info"><span>Pandas</span><span>90%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="90"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-info"><span>NumPy</span><span>88%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="88"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-info"><span>Matplotlib/Seaborn</span><span>85%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="85"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-info"><span>Plotly</span><span>78%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="78"></div>
-                            </div>
-                        </div>
+                    <div class="skill-tags">
+                        <span class="skill-tag">NumPy</span>
+                        <span class="skill-tag">Pandas</span>
+                        <span class="skill-tag">Plotly</span>
+                        <span class="skill-tag">Matplotlib</span>
+                        <span class="skill-tag">Seaborn</span>
                     </div>
                 </div>
+
+                <!-- Deployment & MLOps -->
                 <div class="skill-category reveal">
                     <h3 class="category-title">
                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <ellipse cx="12" cy="5" rx="9" ry="3" />
-                            <path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3" />
-                            <path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5" />
+                            <path d="M4 14.899A7 7 0 1 1 15.71 8h1.79a4.5 4.5 0 0 1 2.5 8.242" />
+                            <path d="M12 12v9" />
+                            <path d="m8 17 4 4 4-4" />
                         </svg>
-                        Databases
+                        Deployment & MLOps
                     </h3>
-                    <div class="skill-items">
-                        <div class="skill-item">
-                            <div class="skill-info"><span>MySQL</span><span>75%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="75"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-info"><span>MongoDB</span><span>70%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="70"></div>
-                            </div>
-                        </div>
+                    <div class="skill-tags">
+                        <span class="skill-tag">Flask</span>
+                        <span class="skill-tag">FastAPI</span>
+                        <span class="skill-tag">Git</span>
+                        <span class="skill-tag">GitHub Actions</span>
+                        <span class="skill-tag">GCP</span>
+                        <span class="skill-tag">Azure</span>
                     </div>
                 </div>
+
+                <!-- Development Tools -->
                 <div class="skill-category reveal">
                     <h3 class="category-title">
                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path
                                 d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z" />
                         </svg>
-                        Tools
+                        Development Tools
                     </h3>
-                    <div class="skill-items">
-                        <div class="skill-item">
-                            <div class="skill-info"><span>Jupyter Notebook</span><span>95%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="95"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-info"><span>VS Code</span><span>90%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="90"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-info"><span>Git/GitHub</span><span>85%</span></div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-progress="85"></div>
-                            </div>
-                        </div>
+                    <div class="skill-tags">
+                        <span class="skill-tag">VS Code</span>
+                        <span class="skill-tag">Linux</span>
+                        <span class="skill-tag">Jupyter Notebook</span>
+                        <span class="skill-tag">Google Colab</span>
+                        <span class="skill-tag">Docker</span>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 
     <!-- Projects Section -->
     <section class="projects" id="projects">
