--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                             <polyline points="16 18 22 12 16 6" />
                             <polyline points="8 6 2 12 8 18" />
                         </svg>Projects</a></li>
-                <li><a href="#github-stats" class="nav-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                <li><a href="#experience" class="nav-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="2">
-                            <path
-                                d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22" />
-                        </svg>GitHub</a></li>
+                            <rect x="2" y="7" width="20" height="14" rx="2" ry="2" />
+                            <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16" />
+                        </svg>Experience</a></li>
                 <li><a href="#contact" class="nav-link nav-contact"><svg viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2">
                             <path
@@ -629,72 +629,155 @@
         </div>
     </section>
 
-    <!-- GitHub Stats Section -->
-    <section class="github-stats" id="github-stats">
+    <!-- Experience Section -->
+    <section class="experience" id="experience">
         <div class="container">
+            <p class="section-subtitle reveal">MY JOURNEY</p>
             <h2 class="section-title reveal">
-                <span class="title-accent"></span> GitHub Activity
+                <span class="title-accent"></span> Professional Experience
             </h2>
-            <div class="stats-grid">
-                <div class="stats-card reveal">
-                    <div class="stats-icon">
-                        <svg viewBox="0 0 24 24" fill="currentColor">
-                            <path
-                                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-                        </svg>
-                    </div>
-                    <h3>Top Languages</h3>
-                    <div class="language-bars">
-                        <div class="lang-item">
-                            <span class="lang-name">Python</span>
-                            <div class="lang-bar">
-                                <div class="lang-progress" style="width: 85%"></div>
+            <p class="section-desc reveal">Building AI solutions that make a difference</p>
+
+            <div class="experience-timeline">
+                <!-- Timeline Line -->
+                <div class="timeline-line"></div>
+
+                <!-- Associate Data Scientist -->
+                <div class="experience-card reveal">
+                    <div class="timeline-node"></div>
+                    <div class="exp-content">
+                        <div class="exp-header">
+                            <div class="exp-info">
+                                <h3>Associate Data Scientist</h3>
+                                <span class="exp-company">Machine Learning 1 (Private) Limited</span>
                             </div>
-                            <span class="lang-percent">85%</span>
+                            <div class="exp-meta">
+                                <span class="exp-date">
+                                    <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                        stroke-width="2">
+                                        <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
+                                        <line x1="16" y1="2" x2="16" y2="6" />
+                                        <line x1="8" y1="2" x2="8" y2="6" />
+                                        <line x1="3" y1="10" x2="21" y2="10" />
+                                    </svg>
+                                    Oct 2024 - Present
+                                </span>
+                                <span class="exp-location">
+                                    <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                        stroke-width="2">
+                                        <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" />
+                                        <circle cx="12" cy="10" r="3" />
+                                    </svg>
+                                    Lahore, Pakistan (On-site)
+                                </span>
+                            </div>
                         </div>
-                        <div class="lang-item">
-                            <span class="lang-name">Jupyter Notebook</span>
-                            <div class="lang-bar">
-                                <div class="lang-progress jupyter" style="width: 10%"></div>
-                            </div>
-                            <span class="lang-percent">10%</span>
+                        <div class="exp-specialization">
+                            <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <circle cx="12" cy="12" r="10" />
+                                <circle cx="12" cy="12" r="6" />
+                                <circle cx="12" cy="12" r="2" />
+                            </svg>
+                            <span><strong>Specialization:</strong> Multilingual OCR & Computer Vision</span>
                         </div>
-                        <div class="lang-item">
-                            <span class="lang-name">C++</span>
-                            <div class="lang-bar">
-                                <div class="lang-progress cpp" style="width: 5%"></div>
+
+                        <div class="exp-metrics">
+                            <div class="metric-badge">
+                                <span class="metric-value">+7% to +10%</span>
+                                <span class="metric-label">Recognition Gain</span>
+                                <span class="metric-detail">Russian & Thai languages</span>
                             </div>
-                            <span class="lang-percent">5%</span>
+                            <div class="metric-badge">
+                                <span class="metric-value">10%</span>
+                                <span class="metric-label">Detection Boost</span>
+                                <span class="metric-detail">Japanese OCR integration</span>
+                            </div>
+                        </div>
+
+                        <div class="exp-contributions">
+                            <h4>Key Contributions</h4>
+                            <ul>
+                                <li>Architected secure, in-house processing pipelines to eliminate third-party data
+                                    risks.</li>
+                                <li>Fine-tuned multilingual detection models for high-stakes global markets.</li>
+                            </ul>
+                        </div>
+
+                        <div class="exp-technologies">
+                            <span class="tech-tag">Computer Vision</span>
+                            <span class="tech-tag">OCR</span>
+                            <span class="tech-tag">Deep Learning</span>
+                            <span class="tech-tag">Model Deployment</span>
+                            <span class="tech-tag">Fine-tuning</span>
                         </div>
                     </div>
                 </div>
-                <div class="stats-card contribution-card reveal">
-                    <h3>Contribution Graph</h3>
-                    <div class="contribution-grid" id="contribution-grid"></div>
-                    <div class="contribution-legend">
-                        <span>Less</span>
-                        <div class="legend-squares">
-                            <div class="legend-square" style="--level: 0"></div>
-                            <div class="legend-square" style="--level: 1"></div>
-                            <div class="legend-square" style="--level: 2"></div>
-                            <div class="legend-square" style="--level: 3"></div>
-                            <div class="legend-square" style="--level: 4"></div>
+
+                <!-- Data Science Intern -->
+                <div class="experience-card reveal">
+                    <div class="timeline-node"></div>
+                    <div class="exp-content">
+                        <div class="exp-header">
+                            <div class="exp-info">
+                                <h3>Data Science Intern</h3>
+                                <span class="exp-company">Machine Learning 1 (Private) Limited</span>
+                            </div>
+                            <div class="exp-meta">
+                                <span class="exp-date">
+                                    <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                        stroke-width="2">
+                                        <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
+                                        <line x1="16" y1="2" x2="16" y2="6" />
+                                        <line x1="8" y1="2" x2="8" y2="6" />
+                                        <line x1="3" y1="10" x2="21" y2="10" />
+                                    </svg>
+                                    Jul 2024 - Sep 2024
+                                </span>
+                                <span class="exp-location">
+                                    <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                        stroke-width="2">
+                                        <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" />
+                                        <circle cx="12" cy="10" r="3" />
+                                    </svg>
+                                    Lahore, Pakistan
+                                </span>
+                            </div>
                         </div>
-                        <span>More</span>
-                    </div>
-                </div>
-                <div class="stats-card streak-card reveal">
-                    <div class="streak-item">
-                        <div class="streak-number" data-target="127">0</div>
-                        <div class="streak-label">Total Contributions</div>
-                    </div>
-                    <div class="streak-item">
-                        <div class="streak-number" data-target="15">0</div>
-                        <div class="streak-label">Current Streak 🔥</div>
-                    </div>
-                    <div class="streak-item">
-                        <div class="streak-number" data-target="28">0</div>
-                        <div class="streak-label">Longest Streak</div>
+                        <div class="exp-specialization">
+                            <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <circle cx="12" cy="12" r="10" />
+                                <circle cx="12" cy="12" r="6" />
+                                <circle cx="12" cy="12" r="2" />
+                            </svg>
+                            <span><strong>Specialization:</strong> English OCR & Object Detection</span>
+                        </div>
+
+                        <div class="exp-metrics">
+                            <div class="metric-badge featured">
+                                <span class="metric-value">98%</span>
+                                <span class="metric-label">Accuracy Achieved</span>
+                                <span class="metric-detail">English OCR optimization</span>
+                            </div>
+                        </div>
+
+                        <div class="exp-contributions">
+                            <h4>Key Contributions</h4>
+                            <ul>
+                                <li>Engineered synthetic data generation pipelines to enhance model resilience against
+                                    noisy inputs.</li>
+                                <li>Optimized YOLO-based detection efficiency through custom dataset fine-tuning.</li>
+                            </ul>
+                        </div>
+
+                        <div class="exp-technologies">
+                            <span class="tech-tag">YOLO</span>
+                            <span class="tech-tag">OpenCV</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Data Preprocessing</span>
+                            <span class="tech-tag">Synthetic Data</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -721,6 +804,18 @@
                         <div class="contact-text">
                             <span class="contact-label">Email</span>
                             <span class="contact-value">qhaider4622@gmail.com</span>
+                        </div>
+                    </a>
+                    <a href="tel:+923001234567" class="contact-item">
+                        <div class="contact-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path
+                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+                            </svg>
+                        </div>
+                        <div class="contact-text">
+                            <span class="contact-label">Phone</span>
+                            <span class="contact-value">+92 334 847 1504</span>
                         </div>
                     </a>
                     <a href="https://linkedin.com/in/qadeer-haider" class="contact-item" target="_blank" rel="noopener">
